--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+appdirs==1.4.4
 appnope==0.1.4
 asttokens==3.0.0
 attrs==25.3.0
@@ -8,11 +12,17 @@ bcrypt==4.3.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 coloredlogs==15.0.1
+cryptography==44.0.2
+dataclasses-json==0.6.7
+datasets==3.5.0
 decorator==5.2.1
 defusedxml==0.7.1
+dill==0.3.8
+diskcache==5.6.3
 distro==1.9.0
 docopt==0.6.2
 ecdsa==0.19.1
@@ -23,7 +33,8 @@ fastembed==0.6.1
 fastjsonschema==2.21.1
 filelock==3.18.0
 flatbuffers==25.2.10
-fsspec==2025.3.2
+frozenlist==1.6.0
+fsspec==2024.12.0
 grpcio==1.71.0
 grpcio-tools==1.71.0
 h11==0.14.0
@@ -32,6 +43,7 @@ hpack==4.1.0
 httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
+httpx-sse==0.4.0
 huggingface-hub==0.30.2
 humanfriendly==10.0
 hyperframe==6.1.0
@@ -40,24 +52,41 @@ ipython==8.12.3
 jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.9.0
+jose==1.0.0
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
+jwt==1.3.1
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-core==0.3.54
+langchain-openai==0.3.14
+langchain-text-splitters==0.3.8
+langsmith==0.3.32
 loguru==0.7.3
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mmh3==5.1.0
 mpmath==1.3.0
+multidict==6.4.3
+multiprocess==0.70.16
+mypy-extensions==1.0.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
+nest-asyncio==1.6.0
 numpy==2.2.4
 onnxruntime==1.21.1
 openai==1.75.0
+orjson==3.10.16
 packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 passlib==1.7.4
@@ -68,23 +97,31 @@ pipreqs==0.5.0
 platformdirs==4.3.7
 portalocker==2.10.1
 prompt_toolkit==3.0.51
+propcache==0.3.1
 protobuf==5.29.4
 ptyprocess==0.7.0
 pure_eval==0.2.3
 py_rust_stemmers==0.1.5
+pyarrow==19.0.1
 pyasn1==0.4.8
+pycparser==2.22
 pydantic==2.11.3
+pydantic-settings==2.9.1
 pydantic_core==2.33.1
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 pyzmq==26.4.0
 qdrant-client==1.13.3
+ragas==0.2.14
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
+requests-toolbelt==1.0.0
 rpds-py==0.24.0
 rsa==4.9.1
 six==1.17.0
@@ -94,11 +131,14 @@ SQLAlchemy==2.0.40
 stack-data==0.6.3
 starlette==0.46.2
 sympy==1.13.3
+tenacity==9.1.2
+tiktoken==0.9.0
 tinycss2==1.4.0
 tokenizers==0.21.1
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
@@ -109,4 +149,7 @@ watchfiles==1.0.5
 wcwidth==0.2.13
 webencodings==0.5.1
 websockets==15.0.1
+xxhash==3.5.0
 yarg==0.1.9
+yarl==1.20.0
+zstandard==0.23.0
